--- a/game/subway-surfers-mumbai.html
+++ b/game/subway-surfers-mumbai.html
@@ -4,9 +4,9 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Subway Surfers Mumbai Unblocked: Play Now for Free on FAF Games</title>
+        <title>Subway Surfers Mumbai Unblocked: Play Now at 76 Unblocked Games</title>
         <meta name="robots" content="index, follow"/>
-        <meta name="description" content="
+        <meta name="description" content="Play Subway Surfers Mumbai Unblocked and dash through the colorful streets of Mumbai. Experience exciting obstacles, vibrant scenery, and endless fun. Start your adventure now!">
         
         <meta name="title" content="Subway Surfers Mumbai">
         <meta name="keywords" content="Subway Surfers Mumbai Game, Running Game, Runninggame, Running Games, RunningGames
@@ -21,9 +21,9 @@
         Subway Surfers Mumbai 2
         Subway Surfers Mumbai crazy games
         Subway Surfers Mumbai unblocked">
-        <meta name="author" content="FAF Games Team">
-        <link rel="canonical" href="/game/subway-surfers-mumbai.html" />
-	<meta name="publisher" content="FAF Games Team">
+        <meta name="author" content="76 Unblocked Games">
+        <link rel="canonical" href="https://76-unblockedgames.github.io/game/subway-surfers-mumbai.html" />
+	<meta name="publisher" content="76 Unblocked Games">
 	<meta name="robots" content="index, follow">
         <!-- Favicon -->
         <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
@@ -304,7 +304,7 @@
          <!-- Header Area Start -->
         <nav class="fag-header navbar navbar-expand-lg">
           <div class="container">
-              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="FAF Games" / style="width: 100px; height: auto;"></a>
+              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="76 Unblocked Games" / style="width: 100px; height: auto;"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="menu-toggle"></span>
               </button>
@@ -1158,7 +1158,7 @@
                     <div class="col-lg-6 col-md-6 col-sm-12">
                         <div class="single-footer1">
                             <h3>About us</h3>
-                <p class="footer-text-color">Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join FAF Games today and start playing!</p>
+                <p class="footer-text-color">Welcome to 76 Unblocked Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join 76 Unblocked Games today and start playing!</p>
                         </div>
                     </div>
 					<div class="col-lg-3">
