--- a/game/subway-surfers-nyc.html
+++ b/game/subway-surfers-nyc.html
@@ -5,8 +5,8 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Subway Surfers New York City Unblocked: Play Now for Free on FAF Games</title>
-        <meta name="description" content="
+        <title>Subway Surfers New York City Unblocked: Play Now at 76 Unblocked Games</title>
+        <meta name="description" content="Join the Subway Surfers adventure in New York City! Dash through the busy streets, dodge obstacles, and collect coins in this exciting endless runner.">
         
         <meta name="title" content="Subway Surfers New York City">
         <meta name="keywords" content="Subway Surfers New York City Game, Running Game, Runninggame, Running Games, RunningGames
@@ -21,9 +21,9 @@
         Subway Surfers New York City 2
         Subway Surfers New York City crazy games
         Subway Surfers New York City unblocked">
-        <meta name="author" content="FAF Games Team">
-        <link rel="canonical" href="/game/subway-surfers-nyc.html" />
-	<meta name="publisher" content="FAF Games Team">
+        <meta name="author" content="76 Unblocked Games">
+        <link rel="canonical" href="https://76-unblockedgames.github.io/game/subway-surfers-nyc.html" />
+	<meta name="publisher" content="76 Unblocked Games">
 	<meta name="robots" content="index, follow">
         <!-- Favicon -->
         <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
@@ -304,7 +304,7 @@
        <!-- Header Area Start -->
         <nav class="fag-header navbar navbar-expand-lg">
           <div class="container">
-              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="FAF Games" / style="width: 100px; height: auto;"></a>
+              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="76 Unblocked Games" / style="width: 100px; height: auto;"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="menu-toggle"></span>
               </button>
@@ -1157,7 +1157,7 @@
                     <div class="col-lg-6 col-md-6 col-sm-12">
                         <div class="single-footer1">
                             <h3>About us</h3>
-                <p class="footer-text-color">Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join FAF Games today and start playing!</p>
+                <p class="footer-text-color">Welcome to 76 Unblocked Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join 76 Unblocked Games today and start playing!</p>
                         </div>
                     </div>
 					<div class="col-lg-3">
